manifests/crate-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crate-demo-service
spec:
  type: LoadBalancer
  selector:
    app: crate-demo
  ports:
  - port: 443
    targetPort: 443
