manifests/crate-demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crate-demo-ingress
  annotations:
    cert-manager.io/cluster-issuer: test-ca-cluster-issuer
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: crate-demo.example.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: crate-demo-service
              port:
                number: 443
  tls:
  - hosts:
    - crate-demo.example.com
    secretName: myingress-cert
